Update Pawn addon to version 2.11.7
- Fix Classic Era druid compatibility bug from v2.11.6
- Improve Spanish localization for critical strike patterns
- Add Mists of Pandaria Classic spec handling improvements
- Update version metadata and changelog

--- a/Pawn/Readme.htm
+++ b/Pawn/Readme.htm
@@ -307,6 +307,16 @@ indeterminate or an upgrade. This can be used for auto-sell rules, such as <code
 </ul>
 
 <h2>Updates</h2>
+<h3>Version 2.11.7</h3>
+<ul>
+	<li>Classic Era: Fixed a bug introduced in version 2.11.6 that caused an error message when playing a druid on Classic Era realms and for the names of the druid starter scales to show up incorrectly.</li>
+</ul>
+<h3>Version 2.11.6</h3>
+<ul>
+	<li>Mists of Pandaria Classic: Fixed a bug that could cause Pawn to show the wrong spec on a fresh character (either Blood or none at all).</li>
+	<li>Mists of Pandaria Classic: Added spec icons to tooltips and the Pawn UI in Automatic mode, like on The War Within.</li>
+	<li>Mists of Pandaria Classic: Added support for more items with critical strike when playing in Latin American Spanish.</li>
+</ul>
 <h3>Version 2.11.5</h3>
 <ul>
 	<li>Classic Era: Fixed an error that would occur when using wands with arcane damage when playing in Traditional Chinese on Classic Era realms.</li>
